Fix Modal Header text-align, if parent container is centered

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -1358,3 +1358,8 @@ body.modal-open {
 .modal-footer {
 	clear: both;
 }
+
+/* Modal Header text align left even if parent container centered */
+.modal-header {
+	text-align: left;
+}
